@@ -19,6 +19,8 @@ open Misc
 open Format
 open Typedtree
 
+module M = Odoc_messages
+
 let print_DEBUG s = print_string s ; print_newline () 
 
 (* we check if we must load a module given on the command line *)
@@ -36,9 +38,29 @@ let (cmo_or_cma_opt, paths) =
     | _ :: q ->
         iter (f_opt, inc) q
   in
-  iter (None, []) arg_list
+  iter (None, [Odoc_config.custom_generators_path]) arg_list
 
 let _ = print_DEBUG "Fin analyse des arguments pour le dynamic load"
+
+(** Return the real name of the file to load, 
+   searching it in the paths if it is
+   a simple name and not in the current directory. *)
+let get_real_filename name =
+   if Filename.basename name <> name then
+     name
+   else
+     (
+      let paths = Filename.current_dir_name :: paths in
+      try
+	let d = List.find
+	    (fun d -> Sys.file_exists (Filename.concat d name))
+	    paths
+	in
+	Filename.concat d name
+      with
+	Not_found ->
+	  failwith (M.file_not_found_in_paths paths name)
+     )
 
 let _ =
   match cmo_or_cma_opt with
@@ -50,8 +72,8 @@ let _ =
       Dynlink.allow_unsafe_modules true;
       try
         Dynlink.add_available_units Odoc_crc.crc_unit_list ;
-        let _ = Dynlink.loadfile file in
-        ()
+        let real_file = get_real_filename file in
+        ignore(Dynlink.loadfile real_file)
       with
         Dynlink.Error e -> 
           prerr_endline (Odoc_messages.load_file_error file (Dynlink.error_message e)) ;
@@ -59,7 +81,8 @@ let _ =
       | Not_found ->
           prerr_endline (Odoc_messages.load_file_error file "Not_found");
           exit 1  
-      | Sys_error s ->
+      | Sys_error s
+      |	Failure s ->
           prerr_endline (Odoc_messages.load_file_error file s);
           exit 1  
 
