@@ -232,8 +232,12 @@ let options = ref [
   "-texi", Arg.Unit (fun () -> set_doc_generator !default_texi_generator), M.generate_texinfo ;
   "-man", Arg.Unit (fun () -> set_doc_generator !default_man_generator), M.generate_man ;    
   "-dot", Arg.Unit (fun () -> set_doc_generator !default_dot_generator), M.generate_dot ;
+  "-customdir", Arg.Unit (fun () -> Printf.printf "%s\n" Odoc_config.custom_generators_path; exit 0),
+  M.display_custom_generators_dir ;
+  "-i", Arg.String (fun s -> if !bytecode_mode then () else (prerr_endline (M.option_not_in_native_code "-i"); exit 1)),
+  M.add_load_dir ;
   "-g", Arg.String (fun s -> if !bytecode_mode then () else (prerr_endline (M.option_not_in_native_code "-g"); exit 1)),
-        M.load_file^"\n" ;
+  M.load_file^"\n" ;
 
 (* html only options *)
   "-all-params", Arg.Set with_parameter_list, M.with_parameter_list ;
